# checkin-rs

./: .gitignore  .travis.yml  Cargo.toml  Rocket.toml
src/: cli.rs  main.rs  usage.txt  utils.rs
src/admin/: config.rs  import.rs  mod.rs
src/api/: checkin.rs  gift.rs  meta.rs  mod.rs  search.rs
src/model/: db.rs  gift.rs  mod.rs  ticket.rs  ticket_cat.rs  ticket_csv_record.rs  today.rs  user.rs
